# kaido

./: .gitignore  Cargo.toml  GEMINI_API_KEY_SETUP.md  LICENSE  README.md  USAGE.md  install.sh
.cargo/: config.toml
.cortex/memory/: index.json
.cortex/roles/: architecture-designer.md  code-assistant.md  documentation-specialist.md  react-expert.md  security-specialist.md  testing-specialist.md  ui-ux-designer.md
.cortex/templates/: checklist-template.md  clarify-template.md  constitution.md  execution-template.md  memory-index.json  plan-template.md  review-template.md  spec-template.md  tasks-template.md
.cursor/commands/: speckit.checklist.md  speckit.constitution.md  speckit.implement.md  speckit.tasks.md
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
config/: default.toml  example.toml  mcp-example.json
docs/: SHELL_WRAPPER_ARCHITECTURE.md
docs/design/: 2026-03-14-skills-architecture.md
docs/plans/: 2026-03-14-ai-shell-implementation.md  2026-03-14-phase1-json-target.md  2026-03-14-plugin-system.md  2026-03-15-ai-coach-design.md
examples/: api_demo.rs
locales/: en.toml  es.toml  ja.toml  zh-CN.toml  zh-TW.toml
models/: README.md
skills/docker/: SKILL.md
skills/nginx/: SKILL.md
skills/security/: SKILL.md
specs/001-ai-shell-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-user-setup-guide/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-i18n-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-build-warnings-remove-emojis/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-shell-logging-improvement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-tui-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-kubectl-mvp-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: auth.rs  config.rs  lib.rs  main.rs  target.rs
src/agent/: agent_loop.rs  diagnosis.rs  mod.rs
src/ai/: copilot.rs  explainer.rs  gemini.rs  mod.rs  ollama.rs  parser.rs  prompt_builder.rs  react.rs
src/audit/: agent_logger.rs  logger.rs  mod.rs  query.rs  schema.rs
src/coach/: context.rs  event_router.rs  mod.rs  ui.rs
src/commands/: engine.rs  mod.rs
src/error/: explainer.rs  mod.rs  patterns.rs
src/kubectl/: context.rs  executor.rs  (+4 more)
tests/: agent_scenarios.rs  executor_test.rs  integration_agent_test.rs  parser_test.rs  real_world_tests.rs  shell_test.rs  showcase_tests.rs
(+104 files in other folders)
